升级java17，整理代码。遗留问题：netty无法使用directbuffer